# mzm-designer

./: CMakeLists.txt  Doxyfile.in  README.md
mzm/: CMakeLists.txt
mzm-designer/: CMakeLists.txt  CursesInit.hpp  CursesWindow.cpp  CursesWindow.hpp  Designer.cpp  Designer.hpp  DesignerOptions.cpp  DesignerOptions.hpp  Editor.cpp  Editor.hpp  Editor.inl  Improver.cpp  Improver.hpp  MazezamCurses.cpp  MazezamCurses.hpp  MazezamPlayable.cpp  MazezamPlayable.hpp  MazezamPlayback.cpp  MazezamPlayback.hpp  MazezamSolverSummary.hpp  Mode.hpp  main.cpp
mzm-solve/: CMakeLists.txt  SolverOptions.cpp  SolverOptions.hpp  solve.cpp
mzm/Mazezam/: MazezamData.cpp  MazezamData.hpp  MazezamData.inl  MazezamHistory.cpp  MazezamHistory.hpp  MazezamPerson.cpp  MazezamPerson.hpp  MazezamPerson.inl  TypesAndConstants.cpp  TypesAndConstants.hpp
mzm/MazezamSolver/: BackgroundSolver.cpp  BackgroundSolver.hpp  Config.cpp  Config.hpp  ConfigEqv.cpp  ConfigEqv.hpp  ConfigWalk.cpp  ConfigWalk.hpp  MazezamImprover.cpp  MazezamImprover.hpp  MazezamRatingType.hpp  MazezamSolutionSource.hpp  MazezamSolutionType.cpp  MazezamSolutionType.hpp  MazezamSolverJob.cpp  MazezamSolverJob.hpp  MultiMazezamSolver.cpp  MultiMazezamSolver.hpp  OfflineSolver.cpp  OfflineSolver.hpp  OutstreamSolutionCollector.cpp  OutstreamSolutionCollector.hpp  Selection.cpp  Selection.hpp  SolutionCollector.hpp
mzm/MzmReaders/: DummyOStream.hpp  FileMzmReader.cpp  FileMzmReader.hpp  MzmReader.hpp  SelectiveMzmReader.cpp  SelectiveMzmReader.hpp
mzm/RangePred/: IntervalSet.hpp  RangePred.cpp  RangePred.hpp
mzmcommon/: CMakeLists.txt
mzmcommon/Observer/: Observer.cpp  Observer.hpp
mzmcommon/Options/: Options.cpp  Options.hpp
mzmslv/: CMakeLists.txt  Solver.hpp  SolverJob.hpp  SolverTypes.hpp  WorkerPool.cpp  WorkerPool.hpp  WorkerPoolClient.hpp  WorkerPoolJob.hpp  WorkerPoolMember.hpp
